# learning_in_public

./: .gitignore  README.md
advent_of_code/2023/: newday.sh
advent_of_code/2023/aoc_5/: t
advent_of_code/2023/aoc_6/: Cargo.toml
advent_of_code/2023/ezlogs/: Cargo.toml
cli-tools/go_cobra/: go.mod  main.go
cli-tools/go_cobra/cmd/: client.go  myFlag.go  root.go  server.go
dispatch_design/ruby_dispatch/: README.md  dispatcher.rb  main.rb
dispatch_design/ruby_dispatch/dispatch_functions/: hello.rb  test.rb
dll-in-every-lang/rust/: Cargo.toml  README.md  proof.txt
dll-in-every-lang/rust/hello_dll/: Cargo.toml
dll-in-every-lang/rust/hello_dll/src/: lib.rs
dll-in-every-lang/rust/hello_exe/: Cargo.toml
encryptors/go_lang/themis/: go.mod  go.sum  main.go
flutter-multi-target-apps/: README.md
flutter-multi-target-apps/myapp/: pubspec.yaml
flutter-multi-target-apps/myapp/lib/: main.dart
fundamental-patterns/code-reuse/pwsh/: main.ps1
fundamental-patterns/for-loops/pwsh/: main.ps1
fundamental-patterns/for-loops/ruby/: do_n_times.rb  main.rb
hello_worlds/hello_world_go/: go.mod  main.go
hello_worlds/hello_world_pwsh/: main.ps1
hello_worlds/hello_world_ruby/: main.rb  printer_module.rb
http_servers/go-lang/: go.mod  main.go
line_editors/go_lang/consume_solution/: example.history  go.mod  main.go
protocols/udp/hello-udp/: Cargo.toml
protocols/udp/hello-udp/src/: main.rs
signal_catching/: go.mod  main.go
tcp_servers/go_examples/client_server/: go.mod  main.go
tcp_servers/pwsh_examples/: README.md  client.ps1  example.ps1  server.ps1
(+48 files in other folders)
